tmux session-wizard keybind

--- a/keybinds.conf
+++ b/keybinds.conf
@@ -18,13 +18,8 @@ unbind 0
 bind x kill-pane
 bind t set-option status
 bind r source-file ~/.config/tmux/tmux.conf
-# bind w run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch && ~/scripts/tmux-previous-session"
-# bind o display-popup -BEh 30% "~/scripts/tmux-workplace --window"
 
-# bind s display-popup -BEh 30% "~/scripts/tmux-workplace && ~/scripts/tmux-previous-session"
-# bind s display-popup -BEh 30% "~/scripts/tmux-workplace"
-# bind 0 run-shell -b "tmux switch-client -t 'personal-notes'"
-# bind ` run-shell -b "tmux switch-client -t $(cat ~/.tmux/tmux-previous-session)"
+bind 0 run-shell -b "tmux switch-client -t 'notes'"
 
 bind h select-pane -L
 bind j select-pane -D
