--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,7 @@ set -g @plugin '27medkamal/tmux-session-wizard'
 set -g @session-wizard 'S'
 set -g @session-wizard-height 40
 set -g @session-wizard-width 50
+bind s display-popup -E -h 40% -b rounded "~/.config/tmux/plugins/tmux-session-wizard/bin/t"
 
 # Resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
