tmux-fzf options

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,6 @@ set -g @plugin '27medkamal/tmux-session-wizard'
 set -g @session-wizard 'S'
 set -g @session-wizard-height 40
 set -g @session-wizard-width 50
-bind s display-popup -E -h 40% -b rounded "~/.config/tmux/plugins/tmux-session-wizard/bin/t"
 
 # Resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -46,12 +45,9 @@ set -g @continuum-restore 'on'
 set -g @continuum-save-interval '5'
 
 # Tmux-fzf
-# TMUX_FZF_PREVIEW=0
-# TMUX_FZF_OPTIONS="--reverse --cycle --no-info --no-separator --no-scrollbar --border=rounded --bind 'tab:toggle-down,shift-tab:toggle-up' -p -w 50% -h 30% -m"
-# TMUX_FZF_SESSION_FORMAT="#{session_path}"
-#
-# bind s run-shell -b "${tmux-fzf-scripts}/session.sh switch"
-# bind o display-popup -E -h 30% -b rounded "${mpd-switch-output}"
+TMUX_FZF_PREVIEW=0
+TMUX_FZF_OPTIONS="--reverse --cycle --no-info --no-separator --no-scrollbar --border=rounded -p -w 50% -h 30% -m"
+TMUX_FZF_SESSION_FORMAT="#{session_path}"
 
 source-file ~/.config/tmux/keybinds.conf
 source-file ~/.config/tmux/theme.conf
