switch to notes script

--- a/keybinds.conf
+++ b/keybinds.conf
@@ -19,8 +19,6 @@ bind x kill-pane
 bind t set-option status
 bind r source-file ~/.config/tmux/tmux.conf
 
-bind 0 run-shell -b "tmux switch-client -t 'notes'"
-
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -29,9 +27,12 @@ bind l select-pane -R
 bind b split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
-# Switch between windows: "Shift + Alt + <H | L>"
 bind -n M-H previous-window
 bind -n M-L next-window
+
+bind 0 run-shell -b "~/scripts/notes-tmux-session"
+bind s display-popup -E -h 40% -b rounded "~/.config/tmux/plugins/tmux-session-wizard/bin/t"
+bind o display-popup -E -h 30% -b rounded "~/scripts/mpd-switch-output"
 
 # Copy mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
