--- a/tmux.conf
+++ b/tmux.conf
@@ -1,54 +1,27 @@
 set -g mouse on
-set -g base-index 1
 set -s escape-time 0
-setw -g mode-keys vi
-set -g set-clipboard on
-set -g pane-base-index 1
-setw -g pane-base-index 1
-set -g renumber-windows on
 set -g allow-passthrough on
 set -g detach-on-destroy on
+set -g default-shell "${SHELL}"
+
+setw -g mode-keys vi
+set -g set-clipboard on
+
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
+setw -g pane-base-index 1
+
 set -g status-position bottom
 set -g status-left-length 50
-set -g default-shell "${SHELL}"
+
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -g update-environment "DISPLAY WAYLAND_DISPLAY SSH_AUTH_SOCK HYPRLAND_INSTANCE_SIGNATURE"
 
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'sainnhe/tmux-fzf'
-
-# Session wizard
-set -g @plugin '27medkamal/tmux-session-wizard'
-set -g @session-wizard 'S'
-set -g @session-wizard-height 40
-set -g @session-wizard-width 50
-
-# Resurrect
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-save-shell-history 'off'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-processes 'batman man ssh rmpc cava yazi'
-
-# Continuum
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-boot 'on'
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '5'
-
-# Tmux-fzf
-TMUX_FZF_PREVIEW=0
-TMUX_FZF_OPTIONS="--reverse --cycle --no-info --no-separator --no-scrollbar --border=rounded -p -w 50% -h 30% -m"
-TMUX_FZF_SESSION_FORMAT="#{session_path}"
-
+source-file ~/.config/tmux/plugins.conf
 source-file ~/.config/tmux/keybinds.conf
 source-file ~/.config/tmux/theme.conf
 
